<resources>
    <string name="app_name">MDP_GROUP_4</string>
    <string name="title_home">Home</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_messages">Messages</string>
    <string name="text_bluetooth">Bluetooth Status: Not connected</string>

    <!--  strings used for home page  -->
    <string name="text_obstacle1">1</string>
    <string name="text_obstacle2">2</string>
    <string name="text_obstacle3">3</string>
    <string name="text_obstacle4">4</string>
    <string name="text_obstacle5">5</string>
    <string name="text_obstacle6">6</string>
    <string name="text_obstacle7">7</string>
    <string name="text_obstacle8">8</string>
    <string name="button_reset">Reset</string>
    <string name="button_imagerec">Image Recognition</string>
    <string name="button_fastest">Fastest Car</string>
    <string name="button_start">Start</string>
    <string name="button_load_preset">Load Preset</string>
    <string name="text_robotStatusTitle">Robot Movement:</string>
    <string name="text_StatusTitle">Status:</string>
    <string name="text_Status">Not Ready</string>
    <string name="text_robotStart">(0, 0, N)</string>
    <string name="text_targetCoorTitle">Target captured:</string>
    <string name="text_targetCoor"> ID -> TARGET_ID: (0, 0, N)</string>
    <string name="text_reset">Reset</string>
    <string name="text_obstacleTitle">Obstacles:</string>
    <string name="text_robotStartPoint">Place Robot</string>
    <string name="text_setDirection">Rotate Object</string>
    <string name="text_setManualMode">Manual On</string>
    <string name="text_cancelManualMode">Manual Off</string>
    <string name="text_reset_robot">Reset Robot</string>
    <string name="text_taskType">Select Task Type:</string>

    <!--  strings used for bluetooth page  -->
    <string name="scanBtn">Scan</string>
    <string name="pairBtn">Pair</string>
    <string name="text_paired">Paired Devices</string>
    <string name="text_available">Available Devices</string>
<!--    <string name="text_none">No devices found</string>-->

    <!--  strings used for messages page  -->
    <string name="text_received">Messages Received:</string>
    <string name="text_sent">Messages Sent:</string>
    <string name="text_hint">Enter message</string>
    <string name="sendBtn">Send</string>
    <string name="copyBtn">Copy</string>
    <string name="clearBtn">Clear</string>

    <!--  heading status  -->
    <string name="bluetooth_device_connected">Bluetooth: Connected to&#160;</string>
    <string name="bluetooth_device_connected_not">Bluetooth: Not Connected</string>
    <string name="cancel_action">Cancel</string>
    <string name="remove_robot">Remove Robot</string>
    <string name="should_not_show_warning">This text should not be here</string>

</resources>