<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#00BAF7"
                >

                <TextView
                    android:id="@+id/textView_robotStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_robotStatusTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_robotStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_robotStart"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#00BAF7" >

                <TextView
                    android:id="@+id/textView_targetCoorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_targetCoorTitle"

                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_targetCoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_targetCoor"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.mdp_android.ui.grid.Map
                    android:id="@+id/mapView"
                    android:layout_width="450dp"
                    android:layout_height="450dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/urbanist_semibold"
                        android:text="@string/bluetooth_device_connected_not"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_StatusTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/urbanist_semibold"
                        android:text="@string/text_StatusTitle"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth" />

                    <TextView
                        android:id="@+id/textView_Status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/urbanist_semibold"
                        android:text="@string/text_Status"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/textView_StatusTitle"
                        app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/obstacle_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="send obstacle"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bin"
                    android:fontFamily="@font/urbanist_semibold" />

                <TextView
                    android:id="@+id/textView_obstacleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="@string/text_obstacleTitle"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_obsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <ToggleButton
                    android:id="@+id/button_startpoint"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/robot_south"
                    android:fontFamily="@font/urbanist_semibold"
                    android:textColor="@color/black" />

                <ToggleButton
                    android:id="@+id/button_setDirection"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/icons8_rotate_right_50"
                    android:fontFamily="@font/urbanist_semibold"
                    android:textColor="@color/black"
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/manualMode"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/icons8_robot_24"
                    android:fontFamily="@font/urbanist_semibold"
                    android:textColor="@color/black"
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/button_remove_robot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/urbanist_semibold"
                    android:textColor="@color/black"
                    android:textOff="@string/remove_robot"
                    android:textOn="@string/cancel_action" />

                <Button
                    android:id="@+id/reset_robot_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="reset robot"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">


            <ToggleButton
                android:id="@+id/button_start"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/start_button"
                android:fontFamily="@font/urbanist_semibold"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textOff="@string/button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:toggleCheckedStateOnClick="false" />

            <TextView
                android:id="@+id/textView_taskType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text_taskType"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/button_taskType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ToggleButton
                android:id="@+id/button_taskType"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/urbanist_semibold"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textOff="@string/button_imagerec"
                android:textOn="@string/button_fastest"
                app:layout_constraintBottom_toTopOf="@+id/button_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageButton_down"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_down"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.808"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />


            <ImageButton
                android:id="@+id/camera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/camera"
                app:layout_constraintBottom_toTopOf="@+id/forwardRight"
                app:layout_constraintEnd_toEndOf="@+id/forwardRight"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/forwardLeft"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:rotation="45"
                android:scaleType="centerCrop"
                android:src="@drawable/back_ward_left"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_left"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_up"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/forwardRight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:rotation="135"
                android:scaleType="centerCrop"
                android:src="@drawable/back_ward_left"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_right"
                app:layout_constraintStart_toEndOf="@+id/imageButton_up"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_left"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:rotation="-45"
                android:scaleType="centerCrop"
                android:src="@drawable/back_ward_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_down"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:rotation="45"
                android:scaleType="centerCrop"
                android:src="@drawable/back_ward_right"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton_down"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_up"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"

                android:src="@drawable/arrow_up"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>